journal: ensure in-flight ops are complete destroying journaler

Fixes: http://tracker.ceph.com/issues/17446
Signed-off-by: Jason Dillaman <dillaman@redhat.com>